--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,24 @@
 /captures
 .externalNativeBuild
 .cxx
+/app/
+*.apk
+*.ap_
+*.dex
+*.class
+bin/
+gen/
+local.properties
+.classpath
+.project
+.idea/
+.gradle
+/*/local.properties
+/*/out
+/*/*/build
+/*/*/production
+*.iml
+*.iws
+*.ipr
+*~
+*.swp
